--- a/m2vm/templates/search.html
+++ b/m2vm/templates/search.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1> Lisitar VMs a partir de uma maquina fisica </h1>
-    <form action="" method="post" novalidate>
-        
-        {{ form.hidden_tag() }}
-        
-        <p>
-            {{ form.username.label }} <br>
-            {{form.username(size=32)}}
-        </p>
-        
-        <p>
-            {{form.submit()}}
-        </p>
-    
-    </form>
+<h1> Lisitar VMs a partir de uma maquina fisica </h1>
+<form action="" method="post" novalidate>
+
+  {{ form.hidden_tag() }}
+
+  <p>
+    {{ form.username.label }} <br>
+    {{ form.username(size=32) }}
+  </p>
+
+  <p>
+    {{form.submit()}}
+  </p>
+
+</form>
+{% endblock %}
