Basic Form and route working

--- a/m2vm/templates/base.html
+++ b/m2vm/templates/base.html
@@ -3,7 +3,7 @@
     <title>M2VM</title>
   </head>
   <body>
-    <div>M2VM: <a href="/index">Forms</a></div>
+    <div>M2VM: <a href="/">Forms</a></div>
     <hr>
     {% block content %}{% endblock %}
   </body>
