--- a/m2vm/templates/search.html
+++ b/m2vm/templates/search.html
@@ -3,16 +3,10 @@
 {% block content %}
 <h1> Listar VMs a partir de uma maquina fisica </h1>
 <form action="" method="post" novalidate>
-
-  {{ form.hidden_tag() }}
-
   <p>
-    {{ form.metal_name.label }} <br>
-    {{ form.metal_name(size=32) }}
-  </p>
-
-  <p>
-    {{form.submit()}}
+    <label for="maquina">Maquina fisica</label> <br>
+    <input type="text" name="maquina"> <br>
+    <input type="submit" name="Procurar">
   </p>
 </form>
 {% endblock %}
