--- a/m2vm/templates/base.html
+++ b/m2vm/templates/base.html
@@ -1,10 +1,18 @@
 <html>
   <head>
     <title>M2VM</title>
+    <style>
+      body { font-family: sans-serif; color: #333; }
+      main { max-width: 50rem; padding: 2rem; margin: auto; }
+      h1 { letter-spacing: -1px; }
+      input[type=text] { width: 100%; padding: 5px; }
+      table { width: 100%; }
+      th, td { text-align: left; padding: 5px 0; border-bottom: 1px solid #ddd; }
+    </style>
   </head>
   <body>
-    <div>M2VM: <a href="/">Forms</a></div>
-    <hr>
-    {% block content %}{% endblock %}
+    <main>
+      {% block content %}{% endblock %}
+    </main>
   </body>
 </html>
