--- a/m2vm/templates/search.html
+++ b/m2vm/templates/search.html
@@ -1,21 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1> Listar VMs a partir de uma maquina fisica </h1>
+
+<span>globomap</span>
+<h1>Lista de VMs a partir de uma máquina física</h1>
 <form action="" method="post" novalidate>
   <p>
     <label for="machine">Maquina fisica</label> <br>
-    <input type="text" name="machine"> <br>
-    <input type="submit" name="search">
+    <input type="text" name="machine" value="{% if machine %}{{ machine }}{% endif %}"> <br>
+    <br>
+    <input type="submit" value="Enviar">
   </p>
 </form>
-{% if info %}
+<br>
 
-<p>
-  {{info}}
-</p>
-
-{%endif %}
-
+{% if vms %}
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Ip</th>
+  </tr>
+  {% for vm in vms %}
+  <tr>
+    <td>{{ vm.name }}</td>
+    <td>{{ vm.ip }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
 
 {% endblock %}
