--- a/m2vm/templates/base.html
+++ b/m2vm/templates/base.html
@@ -1,18 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>M2VM</title>
-    <style>
-      body { font-family: sans-serif; color: #333; }
-      main { max-width: 50rem; padding: 2rem; margin: auto; }
-      h1 { letter-spacing: -1px; }
-      input[type=text] { width: 100%; padding: 5px; }
-      table { width: 100%; }
-      th, td { text-align: left; padding: 5px 0; border-bottom: 1px solid #ddd; }
-    </style>
+    <title>Globomap - Machine 2 VMs</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/app.css">
+    {% block extrahead %}{% endblock %}
   </head>
   <body>
-    <main>
+    <main class="ss-middle-layout">
       {% block content %}{% endblock %}
     </main>
+    {% block js %}{% endblock %}
   </body>
 </html>
