--- a/m2vm/templates/base.html
+++ b/m2vm/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Globomap - Machine 2 VMs</title>
+    <title>Machine 2 VMs - Globomap</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/static/app.css">
