--- a/m2vm/templates/search.html
+++ b/m2vm/templates/search.html
@@ -7,10 +7,8 @@
 <form action="" method="post" novalidate>
   <div class="ss-form-row">
     <label class="ss-label" for="machine">Maquina física</label>
-    <input class="ss-input-text" type="text" name="machine"
-           value="{% if machine %}{{ machine }}{% endif %}"> <br>
-    <br>
-    <button class="ss-btn" type="submit">Enviar</button>
+    <input class="ss-input-text" type="text" name="machine" value="{% if machine %}{{ machine }}{% endif %}">
+    <button class="ss-btn" type="submit">Procurar</button>
   </div>
 </form>
 <br>
