--- a/m2vm/templates/base.html
+++ b/m2vm/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Machine 2 VMs - Globomap</title>
+    <title>Lista de VMs em uma máquina física - Globomap</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/static/app.css">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/static/css/app.css">
     {% block extrahead %}{% endblock %}
   </head>
   <body>
