Now every client method returns a status code

--- a/m2vm/templates/search.html
+++ b/m2vm/templates/search.html
@@ -15,7 +15,7 @@
 
 {% if step == 1 %}
   {% if server_list %}
-  <p>Máquinas com nome semalhante a "<strong>{{ server_name }}</strong>":</p>
+  <p>Máquinas com nome semelhante a "<strong>{{ server_name }}</strong>":</p>
   <table class="ss-table server-list">
     <tr>
       <th>Nome</th>
