--- a/m2vm/static/css/app.css
+++ b/m2vm/static/css/app.css
@@ -138,12 +138,12 @@ input[type=text]::placeholder,
 
 label,
 .ss-label {
-  display: block;
-  font-size: 0.7rem;
+  display: inline-block;
+  font-size: 0.8rem;
   font-weight: bold;
   color: #333;
   text-transform: uppercase;
-  margin-bottom: 5px;
+  margin: 0 15px 5px 0;
 }
 
 .ss-form-group {
